// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Credentials > createCredential (POST /credentials) > snapshot > matches expected response shape 1`] = `
{
  "apiKey": "new-api-key",
  "guid": "new-cred-guid-999",
  "name": "new-server",
  "serverType": "connect",
  "url": "https://new-server.example.com",
}
`;

exports[`Credentials > getCredential (GET /credentials/:guid) > snapshot > matches expected response shape 1`] = `
{
  "apiKey": "test-api-key-12345",
  "guid": "abc-123-def-456",
  "name": "my-connect-server",
  "serverType": "connect",
  "url": "https://connect.example.com",
}
`;

exports[`Credentials > listCredentials (GET /credentials) > snapshot > matches expected response shape 1`] = `
[
  {
    "apiKey": "test-api-key-12345",
    "guid": "abc-123-def-456",
    "name": "my-connect-server",
    "serverType": "connect",
    "url": "https://connect.example.com",
  },
  {
    "apiKey": "staging-api-key",
    "guid": "ghi-789-jkl-012",
    "name": "staging-server",
    "serverType": "connect",
    "url": "https://staging.example.com",
  },
]
`;

exports[`Credentials > resetCredentials (DELETE /credentials) > snapshot > matches expected response shape 1`] = `
{
  "backupFile": "/tmp/credentials-backup-20240101.json",
}
`;

exports[`Credentials > testCredentials (POST /test-credentials) > snapshot > matches expected response shape 1`] = `
{
  "error": null,
  "serverType": "connect",
  "url": "https://connect.example.com",
  "user": {
    "email": "bob@example.com",
    "first_name": "Bob",
    "id": "40d1c1dc-d554-4905-99f1-359517e1a7c0",
    "last_name": "Bobberson",
    "username": "bob",
  },
}
`;
